Source/WebCore/page/FrameView.h
@@ -400,6 +400,9 @@ private:
     
     bool m_layoutSchedulingEnabled;
     bool m_inLayout;
+#if ENABLE(SVG)
+    bool m_inLayoutParentView;
+#endif
     bool m_hasPendingPostLayoutTasks;
     bool m_inSynchronousPostLayout;
     int m_layoutCount;
